Ensure annchor can be clicked by assigning 'z-index:999'.

--- a/src/app/components/App/App.css
+++ b/src/app/components/App/App.css
@@ -5,6 +5,8 @@
 }
 
 .o-app__header {
+  position: relative;
   padding: 15px;
   text-align: center;
+  z-index: 999;
 }
